# warden-simulator

./: .gitmodules  Cargo.toml  README.md  out.txt  tiles.txt
assets/image/: dirt.ptex
examples/: perf.rs
examples/generate/: mod.rs
src/: main.rs  pan_camera.rs
wdn-build/: Cargo.toml
wdn-build/src/: main.rs
wdn-colorgen/: Cargo.toml
wdn-colorgen/src/: main.rs
wdn-enumerate/: Cargo.toml
wdn-enumerate/src/: main.rs
wdn-physics/: Cargo.toml
wdn-physics/src/: collision.rs  door.rs  health.rs  integrate.rs  layer.rs  lerp.rs  lib.rs  pawn.rs  transform.rs
wdn-physics/src/collision/: mod.rs  tests.rs
wdn-physics/src/kinematics/: mod.rs  tests.rs
wdn-physics/src/kinematics/sync/: mod.rs  tests.rs
wdn-physics/src/lerp/: mod.rs  tests.rs
wdn-physics/src/sync/: mod.rs  tests.rs
wdn-physics/src/tile/: adjacency.rs  entity.rs  index.rs  layer.rs  map.rs  material.rs  mod.rs  position.rs  storage.rs  tests.rs
wdn-physics/src/tile/storage/: mod.rs  tests.rs
wdn-render/: Cargo.toml
wdn-render/src/: assets.rs  damage.rs  depth.rs  dev.rs  door.rs  layer.rs  layers.rs  lib.rs  pawn.rs  tile.rs
wdn-render/src/lerp/: mod.rs  tests.rs
wdn-render/src/tile/: material.rs  mod.rs  tile.wgsl  wall.rs
wdn-rl-build/: Cargo.toml
wdn-rl-build/src/: codegen.rs  lib.rs  op.rs  tensor.rs
wdn-rl-model/: Cargo.toml
wdn-rl-model/src/: lib.rs
wdn-rl-onnx/: Cargo.toml  build.rs
wdn-rl-onnx/src/: lib.rs
wdn-rl-ppo/: Cargo.toml
wdn-rl-ppo/src/: algorithm.rs  config.rs  env.rs  lib.rs  model.rs  rollout.rs
wdn-rl-train/: Cargo.toml
wdn-rl-train/src/: main.rs
wdn-save/: Cargo.toml
wdn-save/src/: lib.rs
wdn-spritegen/: Cargo.toml
wdn-spritegen/assets/model/: Door1.bbmodel  Door1.glb  Door2.bbmodel  Door2.glb  Stairs1.bbmodel  Stairs1.glb  Stairs2.bbmodel  Stairs2.glb  Stairs3.bbmodel  Stairs3.glb  Stairs4.bbmodel  Stairs4.glb  Stairs5.bbmodel  Stairs5.glb  Wall1.bbmodel  Wall1.glb  Wall2.bbmodel  Wall2.glb  Walls.bbmodel  Walls.glb  Walls2.bbmodel  Walls2.glb
wdn-spritegen/src/: main.rs
wdn-tasks/: Cargo.toml
wdn-tasks/src/: lib.rs
wdn-ui/: Cargo.toml
wdn-ui/src/: lib.rs
wdn-world/: Cargo.toml
wdn-world/benches/: flow_field_generate.rs  path_section.rs
wdn-world/src/: combat.rs  door.rs  health.rs  lib.rs  pawn.rs
wdn-world/src/door/: mod.rs  tests.rs
wdn-world/src/path/: door.rs  find.rs  flow.rs  map.rs  mod.rs  region.rs  section.rs  tests.rs
wdn-world/src/pawn/: action.rs  mod.rs  path.rs
