[package]
name = "warden-simulator"
version = "0.1.0"
edition = "2024"
publish = false
license = "GPL-3.0"

[[bin]]
name = "wdn"
path = "src/main.rs"

[workspace]
members = ["wdn-physics", "wdn-render", "wdn-save", "wdn-tasks", "wdn-ui"]

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = ["bevy_winit", "multi_threaded", "webgl2", "x11"] }
wdn-physics = { version = "0.1.0", path = "wdn-physics" }
wdn-render = { version = "0.1.0", path = "wdn-render" }
wdn-save = { version = "0.1.0", path = "wdn-save" }
wdn-tasks = { version = "0.1.0", path = "wdn-tasks" }
wdn-ui = { version = "0.1.0", path = "wdn-ui" }
