[package]
name = "warden-simulator"
version = "0.1.0"
edition = "2024"
publish = false
license = "GPL-3.0"

[[bin]]
name = "wdn"
path = "src/main.rs"

[workspace]
members = [
    "wdn-physics",
    "wdn-render",
    "wdn-rl-build",
    "wdn-rl-model",
    "wdn-rl-onnx",
    "wdn-rl-ppo",
    "wdn-rl-train",
    "wdn-save",
    "wdn-tasks",
    "wdn-ui",
    "wdn-world"]

[features]
default = ["dev"]
dev = ["bevy/dev"]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["default_app", "default_platform", "2d_bevy_render", "ui_bevy_render"] }
wdn-physics = { version = "0.1.0", path = "wdn-physics" }
wdn-render = { version = "0.1.0", path = "wdn-render" }
wdn-save = { version = "0.1.0", path = "wdn-save" }
wdn-tasks = { version = "0.1.0", path = "wdn-tasks" }
wdn-ui = { version = "0.1.0", path = "wdn-ui" }
wdn-world = { version = "0.1.0", path = "wdn-world" }
