[package]
name = "wdn-physics"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = "0.18.0-rc.2"
bevy_ecs = "0.18.0-rc.2"
bevy_math = { version = "0.18.0-rc.2", features = ["libm"] }
bevy_platform = "0.18.0-rc.2"
bevy_time = "0.18.0-rc.2"
bevy_transform = { version = "0.18.0-rc.2", features = ["libm"] }
bitflags = "2.10.0"
smallvec = { version = "1.15.1", features = ["union"] }

[dev-dependencies]
approx = "0.5.1"
bevy_math = { version = "0.18.0-rc.2", features = ["approx"] }
