[package]
name = "wdn-physics"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = "0.18.0"
bevy_ecs = "0.18.0"
bevy_math = { version = "0.18.0", features = ["libm"] }
bevy_platform = "0.18.0"
bevy_time = "0.18.0"
bevy_transform = { version = "0.18.0", features = ["libm"] }
bevy_utils = "0.18.0"
bitflags = "2.10.0"
nonmax = "0.5.5"
smallvec = { version = "1.15.1", features = ["union"] }

[dev-dependencies]
approx = "0.5.1"
bevy_math = { version = "0.18.0", features = ["approx"] }
