[package]
name = "wdn-render"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = "0.18.0-rc.1"
bevy_asset = "0.18.0-rc.1"
bevy_camera = "0.18.0-rc.1"
bevy_color = "0.18.0-rc.1"
bevy_ecs = "0.18.0-rc.1"
bevy_image = { version = "0.18.0-rc.1", features = ["png"] }
bevy_log = "0.18.0-rc.1"
bevy_math = "0.18.0-rc.1"
bevy_mesh = "0.18.0-rc.1"
bevy_render = "0.18.0-rc.1"
bevy_sprite = "0.18.0-rc.1"
bevy_sprite_render = "0.18.0-rc.1"
bevy_transform = "0.18.0-rc.1"
bytemuck = "1.24.0"
wdn-physics = { version = "0.1.0", path = "../wdn-physics" }
wdn-tasks = { version = "0.1.0", path = "../wdn-tasks" }
