[package]
name = "wdn-rl-ppo"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = "0.19.1"
bytes = "1.11.0"
prost = "0.14.1"
rand = "0.9.2"
rayon = "1.11.0"
thread_local = "1.1.9"
tracing = "0.1.44"
wdn-rl-model = { version = "0.1.0", path = "../wdn-rl-model" }
wdn-rl-onnx = { version = "0.1.0", path = "../wdn-rl-onnx" }
