[package]
name = "wdn-rl-train"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", default-features = false }
rand = "0.9.2"
wdn-rl-model = { version = "0.1.0", path = "../wdn-rl-model" }
wdn-rl-ppo = { version = "0.1.0", path = "../wdn-rl-ppo" }
wdn-world = { version = "0.1.0", path = "../wdn-world" }
