[package]
name = "wdn-ui"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
bevy_app = "0.18.0"
wdn-render = { version = "0.1.0", path = "../wdn-render" }
wdn-save = { version = "0.1.0", path = "../wdn-save" }
wdn-tasks = { version = "0.1.0", path = "../wdn-tasks" }
wdn-world = { version = "0.1.0", path = "../wdn-world" }
