[package]
name = "wdn-world"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = "0.18.0"
bevy_ecs = "0.18.0"
bevy_log = "0.18.0"
bevy_math = "0.18.0-rc.0"
bevy_platform = "0.18.0"
bevy_time = "0.18.0-rc.0"
bevy_transform = "0.18.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
parking_lot = "0.12.5"
wdn-physics = { version = "0.1.0", path = "../wdn-physics" }
