[package]
name = "wdn-world"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
arrayvec = "0.7.6"
bevy_app = "0.19.0"
bevy_ecs = "0.19.0"
bevy_log = "0.19.0"
bevy_math = "0.19.0"
bevy_platform = "0.19.0"
bevy_tasks = "0.19.0"
bevy_time = "0.19.0"
bevy_transform = "0.19.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
smallvec = "1.15.1"
tracing = "0.1.44"
wdn-physics = { version = "0.1.0", path = "../wdn-physics" }

[dev-dependencies]
approx = "0.5.1"
bevy_math = { version = "0.19.0", features = ["approx"] }
criterion = "0.8.2"

[[bench]]
name = "flow_field_generate"
harness = false

[[bench]]
name = "path_section"
harness = false
